# Headache_Engine

./: .clang-format  .gitignore  CMakeLists.txt  IFT-3100.qbs  Makefile  README.md  addons.make  config.make
.github/workflows/: build-linux.yml  clang-formatter.yml
include/: Application.h  Cursor.h
include/3D/: CameraManager.h  MaterialViewer.h  Model.h  Object3D.h  ParamCurve.h  ParamSurface.h  Voronoi3D.h
include/Animation/: Animator.h  AnimatorManager.h
include/Interface/: CameraInterface.h  DrawingProperties.h  InspectorInterface.h  Interface.h  Theme.h
include/Raycast/: Ray.h  Raytracing.h
include/Renderer/: Renderer2D.h  Renderer3D.h
include/Utils/: Asserts.h  Constant.h  Cubemap.h  Hierarchy.h  HierarchyContainer.h  HierarchyItem.h  ImageUtils.h  InterfaceUtils.h  Logger.h  Sprite.h  VectorPrimitive.h
src/: Application.cpp  Application.h  Constant.h  Curseur.cpp  Curseur.h  Cursor.cpp  Cursor.h  DrawingProperties.h  Hierarchy.h  ImageUtils.cpp  ImageUtils.h  Interface.cpp  Interface.h  InterfaceItem.hpp  Renderer.cpp  Renderer.h  Sprite.cpp  Sprite.h  application.cpp  application.h  imgui.ini  main.cpp  renderer.cpp  renderer.h
src/3D/: CameraManager.cpp  MaterialViewer.cpp  Model.cpp  Object3D.cpp  ParamCurve.cpp  ParamSurface.cpp  Voronoi3D.cpp
src/Animation/: Animator.cpp  AnimatorManager.cpp
src/Interface/: CameraInterface.cpp  DrawingProperties.h  InspectorInterface.cpp  InspectorInterface.h  Interface.cpp  Interface.h  Theme.cpp
src/Raycast/: Ray.cpp  Raytracing.cpp
src/Renderer/: Renderer2D.cpp  Renderer3D.cpp
src/Utils/: Logger.h  (+11 more)
(+25 files in other folders)
